test/pass/internal/hash_derefd_raw_key.lily
var hash: Hash[String, Integer] = []

define f: Integer {
    var i = 1
    hash[i ++ i] = i

    return hash["11"]
}

f()
f()
