test/fail/basic_syntax/wrong_arg_type.lily
#[
SyntaxError: Argument #1 to f is invalid:
Expected Type: Integer
Received Type: String
    from wrong_arg_type.lily:8:
]#

define f(a: Integer) {} f("a")
